6) Use faster hash funcrtion instead jhash2 for arp subsystem.<br>
7) Fix "Fragment Reassembly Timeout" send (RFC792).<br>
8) Kernel nvram now work and set by default.<br>
9) Fix work some usb2serial converter and 3G modems (very low speed).<br>
10) Fix udppath need for correct l2tp kernel mode driver.<br>
11) Leave carrier on for empty bridge.<br>
12) Add nat loopback support for DMZ.<br>
13) Add UDPXYPort variable to change default udpxy port.<br>
14) Add libnet (need for cdp).<br>
15) Add Cisco Discovery deamon support.<br>
16) Fix configure security mode for MBSSID.<br>
17) Update udpxy to PATCH120.<br>
18) Workaround for accept frames > 1514 bytes.<br>
19) Need drop done bit and touch LAN hardware at not allock new skb. Fix realloc.<br>
20) xl2tpd update to 1.3.1 version.<br>
21) If kernel nvram module enabled need backup nvram only first boot and "SaveAndReboot" menu click.<br>
22) Add DMZNATLoopback variable. Enable disable NAT loopback for DMZ host (default disabled).<br>
23) Transmission up to 2.41 version.<br>
24) If DDNS is select need add ddns alias to /etc/hosts with wanip.<br>
25) Fix zcip script and zeroconf now work OK.<br>
26) Rework iptables logic for DMZ work in VPN mode.<br>
27) Net core, mm and fs subsystems some optimize.<br>
28) More correct reload ppp modules for 16Mb devices (Try fix PPE issue).<br>
29) No nedd remove ppp modules for 32Mb devices (Try fix PPE issue).<br>
30) Vpnhelper rework pppd down procedure (Try fix PPE issue).
31) If vlan_double_tag=0 use hardware vlan offload. Save ~10% cpu (after change variable need restart).<br>

<br><br>
<b>For support see:</b><br>
<a href="http://acorp.ru">acorp.ru - Acorp Electronics Inc.</a><br>
<a href="http://ddixlab.ru">ddixlab.ru - Laboratory of built in systems.
</a><br>
<br><br>
<b>News and changes in Russian:</b><br>
<a href="http://wive-ng.sf.net">wive-ng.sf.net - Development opensource routers firmware</a><br>
<br><br>
<b>Bug report please send sfstudio[at]mail.ru</b>
<br>
<br>
<br>