@@ -724,6 +724,7 @@
 29) No nedd remove ppp modules for 32Mb devices (Try fix PPE issue).<br>
 30) Vpnhelper rework pppd down procedure (Try fix PPE issue).
 31) If vlan_double_tag=0 use hardware vlan offload. Save ~10% cpu (after change variable need restart).<br>
+32) Always use for pppoe/pptp/l2tp ifname=ppp0. Others ifaces must be start from ppp1.<br>
 
 <br><br>
 <b>For support see:</b><br>
